# ECF1_Padroes_e_arquitetura_de_software_2026

./: .gitignore  Makefile  legacy.py  pyproject.toml
docs/: diagrama.puml
src/: application.py  main.py
src/models/: __init__.py  customer.py  order.py  order_item.py
src/observers/: account_manager_observer.py  email_observer.py  notification_observer.py  sms_observer.py  special_order_observer.py  whatsapp_observer.py
src/repositories/: __init__.py  interfaces.py  sqlite_repository.py
src/services/: __init__.py  concrete_order_factory.py  inventory_interface.py  inventory_service.py  notification_service.py  order_factory.py  order_service.py  payment_service.py
src/strategies/: client_discount_implementations.py  crypto_payment_strategy.py  discount_implementations.py  discount_strategy.py  item_discount_resolver.py  payment_implementations.py  payment_strategy.py  volume_discount_strategy.py
tests/extensions/: test_crypto_payment.py  test_volume_discount.py  test_whatsapp_observer.py
tests/golden_master/: test_legacy_behavior.py
tests/integration/: test_sqlite_repository.py
tests/property/: test_discount_properties.py  test_observer_properties.py  test_order_properties.py  test_payment_properties.py  test_repository_find_customer.py  test_repository_properties.py
tests/unit/: test_discount_strategies.py  test_models.py  test_notification_service.py  test_order_factory.py  test_order_service.py  test_payment_strategies.py
